# ossdev-02-469284

./: README.md  setup.cfg
.github/workflows/: python-app.yml
primezz/: __init__.py  __main__.py  primezz.py
tests/: unit.py
