[metadata]
name = ossdev-2-469284
version = 0.0.1
author = Ondřej Šebek
author_email = xsevek@fi.muni.cz
description = Open Source Developement course assignment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xsebek/ossdev-2-469284
project_urls =
    Bug Tracker = https://github.com/xsebek/ossdev-2-469284/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    primezz = primezz.primezz:main

